# aoc-all

./: .gitignore  LICENSE  README.md
01-day/: sol.cc  sol2.cc  task2.txt
02-day/: sol.cc  sol.py
03-day/: sol.py  task.txt
2015/02day/: task1.cpp
2017/: README.md
2017/01day/: task.txt
2017/02day/: sol2.py  task.txt  task2.txt
2018/day01/: part1.md  part1.py  part2.md  part2.py
2018/day02/: part1.py  part2.py  task1.md  task2.md
2018/day03/: part1.py  part2.py  task1.md  task2.md
2018/day04/: part1.py  part2.py  task2.md
2018/day05/: part1.py  part2.py  task1.md
2018/day06/: part1.py  part2.py
2018/day07/: part1.py  part1_failed.py  part2.py  task1.md  task2.md
2018/day08/: part1.py  part2.py  task1.md  task2.md
2018/day09/: part1.py  part2_verbose.py  part2_verbose2.py  task2.md
2018/day09/c/: CMakeLists.txt  input.in  main.c
2018/day10/: part1.py
2018/day11/: part1.py  part1_test.py  part2.py
2018/day12/: part1.py  part2.py  part2cycle.py
2018/day13/: part1.py  part2.py
2018/day14/: part1.py  part2.py  task1.md
2018/day15/: ex1.in  part1.py
2018/day15/day15/: CMakeLists.txt  graph.cpp  graph.hpp
2018/day16/: ex2.in  part1.py  part2.py
2018/day17/: old_part1.py  part1.py  task1.md
2019/: .gitignore  CMakeLists.txt
2019/01day/: CMakeLists.txt  task1.cpp  task1.py  task2.cpp  task2.py
2019/02day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/03day/: CMakeLists.txt  Makefile  task1.cpp  task2.cpp
2019/04day/: CMakeLists.txt  Makefile  task1.cpp  task2.cpp
2019/05day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/06day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/07day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/08day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/09day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/10day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/11day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/12day/: CMakeLists.txt
2019/13day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/14day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/15day/: CMakeLists.txt
2019/16day/: CMakeLists.txt  task1.cpp  task2.cpp
2019/17day/: CMakeLists.txt
2019/18day/: CMakeLists.txt
2019/19day/: CMakeLists.txt
2019/20day/: CMakeLists.txt
2019/21day/: CMakeLists.txt
2019/22day/: CMakeLists.txt
2019/23day/: CMakeLists.txt
2019/24day/: CMakeLists.txt
2019/25day/: CMakeLists.txt
2020/: CMakeLists.txt  README.md
2020/01day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/02day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/03day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/04day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/05day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/06day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/07day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/08day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/09day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/10day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/11day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/12day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/13day/cpp/: task2.cpp
2020/14day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/15day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/16day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/17day/cpp/: task1.cpp  task2.cpp
2020/18day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/19day/cpp/: CMakeLists.txt  input_part1.in  input_part2.in  task1.cpp  task2.cpp
2020/20day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/21day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/22day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/23day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2020/24day/cpp/: CMakeLists.txt  task1.cpp
2021/: CMakeLists.txt  README.md
2021/01day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/01day/py/: task1.py  task2.py
2021/01day/rust/: task1.rs  task2.rs
2021/02day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/03day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/04day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/05day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/06day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/06day/py/: task2.py
2021/07day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/08day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/09day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/10day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/11day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/12day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/13day/cpp/: CMakeLists.txt  task1.cpp  task2-naive.cpp  task2.cpp
2021/14day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2021/15day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2022/: CMakeLists.txt  README.md
2022/21day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/: CMakeLists.txt  README.md
2023/01day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/02day/py/: task1.py  task2.py
2023/03day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/04day/cpp/: task1.cpp  task2.cpp
2023/06day/cpp/: CMakeLists.txt  task2.cpp
2023/07day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/08day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/09day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/10day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/11day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2023/15day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/: CMakeLists.txt  README.md
2024/01day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/02day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/03day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/04day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/05day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/06day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/07day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/08day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/09day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/10day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
2024/11day/cpp/: CMakeLists.txt  task1.cpp  task2.cpp
(+58 files in other folders)
